--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-audio-player": "^0.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-hubspot-form": "^1.3.7",
     "react-scroll": "^1.8.1",
     "react-scrolllock": "^5.0.1",
     "theme-ui": "^0.3.5",
